<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp">

    <TextView
        android:id="@+id/txtEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:text="@string/editar_cadastro"
        android:textColor="#DE781F"
        android:textSize="25sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/imgDog"
        android:layout_width="189dp"
        android:layout_height="128dp"
        android:layout_gravity="center" />

    <EditText
        android:id="@+id/editApelido"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/apelido"
        android:inputType="textPersonName"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/editTamanho"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/tamanho"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/editLocalidade"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/localidade"
        android:inputType="textPersonName"/>

    <Button
        android:id="@+id/btnEditar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#D81FDE"
        android:text="@string/atualizar"
        android:textColor="#fff" />

</LinearLayout>